fix sql log area on small screens

--- a/viewer/src/styles.css
+++ b/viewer/src/styles.css
@@ -63,3 +63,7 @@
     flex-direction: column;
     gap: 5px;
 }
+
+#viewer #right_panel > div {
+    height: 33.33%;
+}
